feat: se le dan estilos a la pagina de inicio y al home junto con las cards,corrigiendo filtros

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  height: 100vh;
 /*   text-align: center;
   background-image: linear-gradient(to right top, #641619, #6b0f25, #700834, #720744, #700f55, #65266d, #503781, #2e4690, #005a98, #006993, #007587, #0e7f78); */
 }
