--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -3,10 +3,13 @@
     gap: 2rem;
     position: absolute;
     width: 100%;
+    height: 100%;
+    overflow-y: auto;
     background-image: linear-gradient(to right top, #641619, #6b0f25, #700834, #720744, #700f55, #65266d, #503781, #2e4690, #005a98, #006993, #007587, #0e7f78);
 }
 .sidebar {
-    position: fixed;
+    position: sticky;
+    top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
