--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,106 +1,19 @@
 .container{
-    display: grid;
-    width: 100%;
-    height: 100vh;
-    grid-template-rows: 1fr 5fr;
-}
-.buttonH {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right top, #641619, #6b0f25, #700834, #720744, #700f55, #65266d, #503781, #2e4690, #005a98, #006993, #007587, #0e7f78);
 }
 
-.buttonD{
-    --color-bg:#E44E55;
-    --color-bg-light:#E47479;
-    --color-bg-dark:#D13239;
-    appearance:none;
-    box-sizing:border-box;
-    font-size:calc( var(--button-height) / 3 );
-    font-family: sans-serif;
-    background: var(--color-bg);
-    height:var(--button-height);
-    min-width:var(--button-height);
-    border-radius:calc( var(--button-height) / 2);
-    border:0;
-    font-weight:800;
-    text-transform:uppercase;
-    color:var(--color-text);
-    text-shadow: 1px 1px var(--color-text-shadow);
-    cursor:pointer;
-    margin:6px 6px;
-    letter-spacing:.1em;
-    transition: all 200ms ease;
-    box-shadow:
-      -1px  -1px 1px var(--color-bg), 
-      0 0 0 4px var(--color-overlay-medium), 
-      1px  1px 1px var(--color-bg-dark),
-      inset .0 .0 .0 var(--color-overlay-dark),    
-      inset .5rem .5rem .25rem var(--color-bg-light) 
-}
 
-.name{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    margin: 0px;
-    font-weight:800;
-    text-transform:uppercase;
-    margin-bottom:1rem;
-    font-size:40px;
-}
-
-.title{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    margin: 0px;
-    font-weight:800;
-    text-transform:uppercase;
-    margin-bottom:1rem;
-    font-size:20px;
-}
-
-.homeb{
-    --color-bg:#00A07D;
-    --color-bg-light:#00AF8A;
-    --color-bg-dark:#008F70;
-    appearance:none;
-    box-sizing:border-box;
-    font-size:calc( var(--button-height) / 3 );
-    font-family: sans-serif;
-    background: var(--color-bg);
-    height:var(--button-height);
-    min-width:var(--button-height);
-    border-radius:calc( var(--button-height) / 2);
-    border:0;
-    font-weight:800;
-    text-transform:uppercase;
-    color:var(--color-text);
-    text-shadow: 1px 1px var(--color-text-shadow);
-    cursor:pointer;
-    margin:6px 6px;
-    letter-spacing:.1em;
-    transition: all 200ms ease;
-    box-shadow:
-      -1px  -1px 1px var(--color-bg), 
-      0 0 0 4px var(--color-overlay-medium), 
-      1px  1px 1px var(--color-bg-dark),
-      inset .0 .0 .0 var(--color-overlay-dark),    
-      inset .5rem .5rem .25rem var(--color-bg-light) 
-}
 
 .formC {
     display: flex;
     width: 100%;
-    height: 80%;
+    padding-top: 5rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .form {
