--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,40 +1,96 @@
-.container{
+.container {
     display: flex;
     width: 100%;
-    height: 100%;
     background-image: linear-gradient(to right top, #641619, #6b0f25, #700834, #720744, #700f55, #65266d, #503781, #2e4690, #005a98, #006993, #007587, #0e7f78);
 }
 
-
+.buttonD{
+    padding: 10px;
+    width: 60%;
+    background: rgba(98, 49, 190, 0.2);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    border-radius: 10px;
+    margin: 18px 0;
+    color: white;
+}
 
 .formC {
     display: flex;
     width: 100%;
     padding-top: 5rem;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 }
 
+.preView_card {
+    flex: 0.4;
+}
+
 .form {
-    display: grid;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    height: 100%;
     border-radius: 15px;
-    background:var(--color-bg);
-    border:1px solid var(--color-page-bg);
-};
+    background: transparent;
+    flex: 0.7 1;
+}
 
-.error{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
+.form>input {
+    height: 100%;
+    width: 60%;
+    padding: 6px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    border: none;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+select{
+    width: 62%;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    padding: 6px;
+/*     margin: 10px 0; */
+    border-radius: 10px;
+}
+
+h2 {
+    color: white;
+}
+
+label {
+    width: 60%;
+    color: white;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 18px;
+}
+
+.preImage {
+    background-color: #ffffff;
+    width: 200px;
+    height: 200px;
+}
+
+.error {
+    color: rgba(0, 0, 0, 0.534);
+    text-shadow: 1px 1px rgba(255, 255, 255, .15);
     font-family: sans-serif;
     margin: 0px;
-    font-weight:800;
-    text-transform:uppercase;
-    margin-bottom:1rem;
-    font-size:10px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    font-size: 10px;
 }
