--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -1,243 +1,52 @@
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    background-image: linear-gradient(to right top, #641619, #6b0f25, #700834, #720744, #700f55, #65266d, #503781, #2e4690, #005a98, #006993, #007587, #0e7f78);
+
 }
 
-.gridContainer{
+.displayContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-bottom: 1%;
-    background:var(--color-bg);
-    width: 80%;
-    border:1px solid var(--color-page-bg);
-    border-radius: 2%;
-    margin: 20px;
-    padding: 10px;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 5rem;
+    height: 100%;
 }
 
-.name{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    margin: 0px;
-    font-weight:800;
-    text-transform:uppercase;
-    margin-bottom:1rem;
-    font-size:100px;
-    grid-column-start:1;
-    grid-column-end: 4;
+.cointainerImg {
+    width: auto;
+    padding: 1rem;
 }
 
-.divimg{
-    display: flex;
-    justify-content: center;
+.imgDescription {
     object-fit: cover;
-    border-radius: 3%;
-    grid-column-start:1;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 5;
+    width: 100%;
+    height: 100%;
 }
 
-.img{
-    width: 95%;
-    border-radius: 2%;
+.containerDetail {
+    
 }
 
-.plattitle{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:2rem;
-    margin-top: 5px;
-    grid-column-start:1;
-    grid-column-end: 4;
-    margin-bottom: 0px;
-    grid-column-start:1;
-    grid-column-end: 4;
+.containerDetail>p {
+    color: white;
+    font-size: 15px;
 }
-
-.descrip{
+.containerInfo{
     display: flex;
     flex-direction: column;
-    text-align: center;
-    justify-items: center;
-    justify-content: center;
-    margin: 10px;
-    padding: 10px;
-    grid-column-start:1;
-    grid-column-end: 4;
 }
-
-.rele{
-    grid-column-start:3;
-    grid-column-end: 4;
+.containerInfo>p{
+    color: white;
 }
-
-.platgrid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    padding: 10px;
-    margin: 10px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    grid-column-start:1;
-    grid-column-end: 4;
+strong{
+    margin-left: 5px;
+    font-size: 15px;
+    font-weight: 400;
 }
-
-.genregrid{
-    grid-column-start:3;
-    grid-column-end: 4;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 10px;
-    margin: 10px;
-}
-
-.genretitle{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:1.5rem;
-    margin-top: 5px;
-    grid-column-start:1;
-    grid-column-end: 4;
-    margin-bottom: 0px;
-}
-
-.title{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    margin-bottom:1rem;
-    font-size:1.5rem;
-    margin-top: 0px;
-}
-
-.rate{
-    color:rgba(114, 99, 12, 0.61);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    margin-bottom:1rem;
-    font-size:5rem;
-    margin-top: 0px;
-}
-.genre{
-    color:rgba(0, 0, 0, 0.247);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:1.5rem;
-    margin: 10px;
-}
-
-.rele{
-    color:rgba(0, 0, 0, 0.534);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:1.5rem;
-    margin-top: 10px;
-    margin-bottom: 5px
-}
-
-.released{
-    color:rgba(0, 0, 0, 0.247);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:2.2rem;
-    margin: 10px;
-}
-
-.description{
-    color:rgba(0, 0, 0, 0.363);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:1rem;
-    margin: 10px;
-}
-
-.unique{
-    color:rgba(0, 0, 0, 0.247);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:1.5rem;
-    margin: 10px;
-    grid-column-start:1;
-    grid-column-end: 4;
-}
-
-.dupli{
-    color:rgba(0, 0, 0, 0.247);
-    text-shadow: 1px 1px rgba(255,255,255,.15);  
-    font-family: sans-serif;
-    font-weight:800;
-    text-transform:uppercase;
-    font-size:1.5rem;
-    margin: 10px;
-    grid-column-start:1;
-    grid-column-end: 4;
-}
-
-.buttoncontainer{
-    margin: 10px;
-    padding: 10px;
-}
-
-.homeButt{
-    --color-bg:#00A07D;
-    --color-bg-light:#00AF8A;
-    --color-bg-dark:#008F70;
-    appearance:none;
-    box-sizing:border-box;
-    font-size:calc( var(--button-height) / 3 );
-    font-family: sans-serif;
-    background: var(--color-bg);
-    height:var(--button-height);
-    min-width:var(--button-height);
-    border-radius:calc( var(--button-height) / 2);
-    border:0;
-    font-weight:800;
-    text-transform:uppercase;
-    color:var(--color-text);
-    text-shadow: 1px 1px var(--color-text-shadow);
-    cursor:pointer;
-    margin:6px 6px;
-    letter-spacing:.1em;
-    transition: all 200ms ease;
-    box-shadow:
-      -1px  -1px 1px var(--color-bg), 
-      0 0 0 4px var(--color-overlay-medium), 
-      1px  1px 1px var(--color-bg-dark),
-      inset .0 .0 .0 var(--color-overlay-dark),    
-      inset .5rem .5rem .25rem var(--color-bg-light) 
-}
-
-.homeButt:focus{
-    outline:none;
-    box-shadow:
-    -1px -1px 1px var(--color-bg-dark), 
-    0 0 0 4px var(--color-tab-focus),
-    1px  1px 1px var(--color-bg-dark), 
-    inset 0 0 0 var(--color-overlay-dark), 
-    inset .5rem .5rem .25rem var(--color-bg-light), 
-    ;
+.containerDetailInfo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: white;
 }
