--- a/client/src/components/Filter/Filter.module.css
+++ b/client/src/components/Filter/Filter.module.css
@@ -64,36 +64,7 @@
     text-align: center;
 }
 
-.button1{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    --color-bg:#E44E55;
-    --color-bg-light:#E47479;
-    --color-bg-dark:#D13239;
-    appearance:none;
-    box-sizing:border-box;
-    font-size:calc( var(--button-height) / 3 );
-    font-family: sans-serif;
-    background: var(--color-bg);
-    height:var(--button-height);
-    min-width:var(--button-height);
-    border-radius:calc( var(--button-height) / 2);
-    border:0;
-    font-weight:800;
-    text-transform:uppercase;
-    color:var(--color-text);
-    text-shadow: 1px 1px var(--color-text-shadow);
-    cursor:pointer;
-    margin:6px 6px;
-    letter-spacing:.1em;
-    transition: all 200ms ease;
-    box-shadow:
-      -1px  -1px 1px var(--color-bg), 
-      0 0 0 4px var(--color-overlay-medium), 
-      1px  1px 1px var(--color-bg-dark),
-      inset .0 .0 .0 var(--color-overlay-dark),    
-      inset .5rem .5rem .25rem var(--color-bg-light) 
-}
+
 
 .button2{
     grid-column-start: 2;
@@ -126,36 +97,15 @@
       inset .5rem .5rem .25rem var(--color-bg-light) 
 }
 
-.button3{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    --color-bg:#FFC054;
-    --color-bg-light:#FFD996;
-    --color-bg-dark:#F2AA30;
-    width: 120px;
-    appearance:none;
-    box-sizing:border-box;
-    font-size:calc( var(--button-height) / 3 );
-    font-family: sans-serif;
-    background: var(--color-bg);
-    height:var(--button-height);
-    min-width:var(--button-height);
-    border-radius:calc( var(--button-height) / 2);
-    border:0;
-    font-weight:800;
-    text-transform:uppercase;
-    color:var(--color-text);
-    text-shadow: 1px 1px var(--color-text-shadow);
-    cursor:pointer;
-    margin:6px 6px;
-    letter-spacing:.1em;
-    transition: all 200ms ease;
-    box-shadow:
-      -1px  -1px 1px var(--color-bg), 
-      0 0 0 4px var(--color-overlay-medium), 
-      1px  1px 1px var(--color-bg-dark),
-      inset .0 .0 .0 var(--color-overlay-dark),    
-      inset .5rem .5rem .25rem var(--color-bg-light) 
+.button{
+    padding: 0.5rem;
+    border-radius: 10px;
+    background-color: rgba(20, 11, 94, 0.747);
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .button4{
